--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -26,6 +26,12 @@ keboola_salesforce_extractor_configs_getconfig:
         _controller: 'KeboolaSalesforceExtractorBundle:Configs:getConfig'
     requirements:
         _method: GET
+keboola_salesforce_extractor_configs_postconfig:
+    pattern: '/configs/{id}'
+    defaults:
+        _controller: 'KeboolaSalesforceExtractorBundle:Configs:postConfig'
+    requirements:
+        _method: POST
 keboola_salesforce_extractor_configs_addrow:
     pattern: '/configs/{id}/rows'
     defaults:
